Bingさんの助太刀を得た

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
             <title>はっちゃんの雑ノート</title>
-            <link href="data:text/css,%5Bid*%3D'google_ads_iframe'%5D%2C%5Bid*%3D'taboola-'%5D%2C.taboolaHeight%2C.taboola-placeholder%2C%23credential_picker_container%2C%23credentials-picker-container%2C%23credential_picker_iframe%2C%5Bid*%3D'google-one-tap-iframe'%5D%2C%23google-one-tap-popup-container%2C.google-one-tap-modal-div%2C%23amp_floatingAdDiv%2C%23ez-content-blocker-container%2C%23notify-adblock%7Bdisplay%3Anone!important%3Bmin-height%3A0!important%3Bheight%3A0!important%3B%7D" rel="stylesheet" type="text/css">
+            <link rel="stylesheet" href="style.css">
     </head>
     <head>
         <style data-vue-ssr-id="d5a2a410:0 2939f2db:0 7b25706f:0 4bee5775:0">
@@ -97,7 +97,18 @@
     
 </head>
 <body>
-    <h1>はっちゃんの雑ノート</h1>
+    <header>
+        <div class="logo">
+            <h1>はっちゃんの雑ノート</h1>
+        </div>
+        <div class="social">
+            <a href="https://twitter.com/obukun_quality"><img src="twitter.png" alt="Twitter"></a>
+            <a href="https://github.com/Hatchan-Desire"><img src="github.png" alt="GitHub"></a>
+        </div>
+    </header>
+    <main>
         <p>準備中</p>
+    </main>
 </body>
 </html>
+
